--- a/resources/fxml/main.fxml
+++ b/resources/fxml/main.fxml
@@ -1,7 +1,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <GridPane fx:controller="controller.MainController" styleClass="grid-pane"
-          xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="25" vgap="10">
 
     <Label fx:id="mNumberOfClustersLabel"
            text="Number of clusters: "
@@ -26,32 +26,43 @@
             GridPane.columnIndex="2"/>
 
     <Label fx:id="mSSELabel"
-           GridPane.columnSpan="3"
+           GridPane.columnSpan="2"
            GridPane.rowIndex="8"
            GridPane.columnIndex="0"/>
 
     <Label fx:id="mClusterOneLabel"
-           GridPane.columnSpan="3"
+           GridPane.rowIndex="8"
+           GridPane.columnIndex="2"/>
+    <Label fx:id="mClusterOneOffersLabel"
            GridPane.rowIndex="9"
-           GridPane.columnIndex="0"/>
+           GridPane.columnIndex="2"/>
 
     <Label fx:id="mClusterTwoLabel"
-           GridPane.columnSpan="3"
-           GridPane.rowIndex="10"
-           GridPane.columnIndex="0"/>
+           GridPane.rowIndex="8"
+           GridPane.columnIndex="4"/>
+    <Label fx:id="mClusterTwoOffersLabel"
+           GridPane.rowIndex="9"
+           GridPane.columnIndex="4"/>
 
     <Label fx:id="mClusterThreeLabel"
-           GridPane.columnSpan="3"
-           GridPane.rowIndex="11"
-           GridPane.columnIndex="0"/>
+           GridPane.rowIndex="8"
+           GridPane.columnIndex="6"/>
+    <Label fx:id="mClusterThreeOffersLabel"
+           GridPane.columnSpan="2"
+           GridPane.rowIndex="9"
+           GridPane.columnIndex="6"/>
 
     <Label fx:id="mClusterFourLabel"
-           GridPane.columnSpan="3"
-           GridPane.rowIndex="12"
-           GridPane.columnIndex="0"/>
+           GridPane.rowIndex="8"
+           GridPane.columnIndex="8"/>
+    <Label fx:id="mClusterFourOffersLabel"
+           GridPane.rowIndex="9"
+           GridPane.columnIndex="8"/>
 
     <Label fx:id="mClusterFiveLabel"
-           GridPane.columnSpan="3"
-           GridPane.rowIndex="13"
-           GridPane.columnIndex="0"/>
+           GridPane.rowIndex="8"
+           GridPane.columnIndex="10"/>
+    <Label fx:id="mClusterFiveOffersLabel"
+           GridPane.rowIndex="9"
+           GridPane.columnIndex="10"/>
 </GridPane>
